fix: adjusting css sizes on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,7 @@ main{
     border-radius: 1rem;
     background-image: linear-gradient(rgb(224, 188, 255), rgb(104, 48, 225), rgb(23, 40, 223));
     height: 100%;
-    max-width: 80vh;
+    width: 40vw;
     display: flex;
     flex-direction: column;
 }
@@ -235,13 +235,26 @@ img {
     background: linear-gradient(to right, rgb(169, 169, 255), rgb(44, 44, 255));
 }
 
-@media (max-width: 530px) {
-    .section-wrapper {
-        padding: 0 7rem 0 7rem;
+@media (max-width: 1375px) {
+    .flex-wrapper{
+        width: 80vw;
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 700px) {
+    .flex-wrapper{
+        width: 70vw;
+    }
+    .section-wrapper {
+        padding: 0 4rem 0 4rem;
+    }
+}
+
+@media (max-width: 595px) {
+    .flex-wrapper{
+        width: 80vw;
+    }
+
     .section-wrapper {
         padding: 0 2rem 0 2rem;
     }
